--- a/week-01/python/python-01.ipynb
+++ b/week-01/python/python-01.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c14a63b2-ed00-454a-b02b-c9f4f9f23163",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Hello, Universe!\n"
      ]
@@ -79,7 +79,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Variables and Operators <a name='variables-and-operators'></a>"
+    "## Variables  <a name='variables-and-operators'></a>"
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,26 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "30 Peter\n"
+      "14 Peter\n"
      ]
     }
    ],
    "source": [
-    "age = 30\n",
     "name = 'Peter'\n",
     "print(age, name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "30 Peter\n"
+      "14 David\n"
      ]
     }
    ],
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +269,12 @@
     }
    ],
    "source": [
-    "print(x//y)"
+    "print(x//y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -309,23 +308,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1\n2\n"
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 1\n",
+    "b=2\n",
+    "c=5\n",
+    "\n",
+    "print(int(x+y*a/b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 1st value\n2 2nd value\n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
     "i = i + 1\n",
-    "print(i)\n",
+    "print(i, \"1st value\")\n",
     "i += 1\n",
-    "print(i)"
+    "print(i, \"2nd value\")"
    ]
   },
   {
@@ -347,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +389,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 27,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -392,12 +412,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Your name is Peter Malan\n"
+     ]
+    }
+   ],
    "source": [
-    "userName = 'Peter'\n",
-    "userSpouseName = 'Janet'\n"
+    "firstName = 'Peter'\n",
+    "lastName= 'Malan'\n",
+    "print('Your name is '+ firstName +\" \"+ lastName)\n"
    ]
   },
   {
@@ -412,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "47\n"
+      "67\n"
      ]
     }
    ],
@@ -431,14 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "14\n"
+      "13\n"
      ]
     }
    ],
@@ -450,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "3 4.0 7.0\n"
+      "7 9.0 16.0\n"
      ]
     }
    ],
@@ -484,7 +513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -545,11 +583,11 @@
   },
   {
    "source": [
-    "upcoming_scores = []"
+    "upcoming_scores = []\n"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 34,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -569,11 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthsOfYear = ('Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec')"
+    "monthsOfYear = ('Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec')\n",
+    "coordinates = (8,9,5)"
    ]
   },
   {
@@ -585,19 +624,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Jan Dec\n"
+      "Jan Jan\n"
      ]
     }
    ],
    "source": [
-    "print( monthsOfYear[0] , monthsOfYear[-1] )"
+    "print( monthsOfYear[0] , monthsOfYear[-12] )"
    ]
   },
   {
@@ -617,36 +656,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "marks = {\"English\": 95, \"Maths\": 98, \"Physics\": 100}"
+    "marks = {67: 95, \"Maths\": 98, \"Physics\": 100}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "98"
+       "95"
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 62
     }
    ],
    "source": [
-    "marks[\"Maths\"]"
+    "marks[67]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,11 +694,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Social_Science': 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "upcoming_marks[\"Social_Science\"] = 96"
+    "upcoming_marks[\"Social_Science\"] = 96\n",
+    "print(upcoming_marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'English': 95, 'Maths': 98, 'Physics': 100, 'Social': 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(marks)\n",
+    "marks[\"Social\"] = 97\n"
    ]
   },
   {
@@ -681,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -703,14 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Learn counting again!\n"
+      "Incorrect\nsomething\n"
      ]
     }
    ],
@@ -721,7 +787,7 @@
     "elif n== 6 : \n",
     "    print(\"Learn counting again!\")\n",
     "else :\n",
-    "    print (\"Incorrect\")\n"
+    "    print (\"Incorrect\")"
    ]
   },
   {
@@ -735,25 +801,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "4\n"
+      "69\nnot a fifty\n5\nnot a fifty\n0\nnot a fifty\n"
      ]
     }
    ],
    "source": [
-    "scores = [\"78\", \"67\", \"69\",\"5\", \"0\", \"95\", \"49\"]\n",
+    "score = [\"78\", \"67\", \"69\",\"5\", \"0\", \"95\", \"49\"]\n",
     "fifties = 0\n",
     "\n",
-    "for score in scores : \n",
-    "    if int(score) >= 50 :\n",
+    "for score in scores[2:5]: \n",
+    "    print(score)\n",
+    "    if int(s) >= 50 :\n",
+    "        print(\"yaay! a fifty\")\n",
     "        fifties +=1\n",
-    "print(fifties)\n"
+    "    else :\n",
+    "        print(\"not a fifty\")\n",
+    "\n"
    ]
   },
   {
@@ -787,21 +857,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_fifties (scores) :\n",
     "    fifties= 0\n",
-    "    for score in scores : \n",
+    "    for score in scores: \n",
+    "       \n",
     "        if int(score) >= 50 :\n",
+    "            \n",
     "            fifties +=1\n",
-    "    return fifties\n"
+    "    return fifties\n",
+    "       \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -829,19 +903,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2\n3\n2\n"
+      "Dhoni\n2\nVirat\n3\nRohit\n2\n"
      ]
     }
    ],
    "source": [
     "for player in score_stats:\n",
+    "    print(player)\n",
     "    print(count_fifties(score_stats[player]))"
    ]
   }
