week 3 contents modified

--- a/week-03/relativity-and-cosmology/Assignments/TeX/Relativity.tex
+++ b/week-03/relativity-and-cosmology/Assignments/TeX/Relativity.tex
@@ -27,7 +27,7 @@ The distance to this galaxy, M87, is about D = 62 million light years. One can u
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[scale=0.25]{lum1.png} 
+\includegraphics[scale=0.3]{lumino.png} 
 \caption{Blobs}
 \end{figure}
 
